--- a/src/styles.scss
+++ b/src/styles.scss
@@ -44,6 +44,9 @@ body {
     align-items: center;
 }
 
+.winner {
+    box-shadow: 0px 0px 38px 0px rgba(66, 173, 54, 1);
+}
 
 @media screen and (max-width: 599px) {
     .title {
