--- a/src/app/starships/starships.component.html
+++ b/src/app/starships/starships.component.html
@@ -16,9 +16,11 @@
     <app-grid-list *ngIf="player1 && player2">
         <app-starship leftElement
                       [starship]="player1"
+                      [class.winner]="winner1"
                       player="Player1"></app-starship>
         <app-starship rightElement
                       [starship]="player2"
+                      [class.winner]="winner2"
                       player="Player2"></app-starship>
     </app-grid-list>
 
